@@ -8,11 +8,12 @@ update-manager (1:0.73) gutsy; urgency=low
     - added test for this country_mirror()
   * DistUpgrade/DistUpgradeControler.py:
     - check trust of pre-requists files before downloading them
+    - support pre-requists on the CD as well
   * DistUpgrade/build-tarball.sh:
     - fix auto-generation of target distro in cdromupgrade 
       script (LP:#138354) 
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Sep 2007 15:42:34 +0200
 
 update-manager (1:0.72) gutsy; urgency=low
 
